@@ -1,6 +1,7 @@
 import scala.io.Source.fromFile
 
 import Configurations._
+import Dependencies.baseDependencies
 import Settings._
 import Tasks._
 
@@ -8,41 +9,39 @@ scalaVersion in ThisBuild := Versions.scala
 
 scalaOrganization in ThisBuild := "org.typelevel"
 
+// workaround for https://github.com/sbt/sbt/issues/2814
+scalaOrganization in updateSbtClassifiers := (scalaOrganization in Global).value
+
 lazy val phoenix = (project in file("phoenix"))
-  .dependsOn(starfish, objectframework)
+  .dependsOn(core, objectframework)
   .configs(IT, ET)
   .settings(itSettings, etSettings)
   .settings(commonSettings)
-  .settings(reformatOnCompileWithItSettings)
   .settings(
     libraryDependencies ++= {
       import Dependencies._
-      akka ++ http ++ auth ++ json4s ++ fasterxml ++ apis ++ logging ++ test ++ misc ++ kafka
+      baseDependencies ++ akka ++ http ++ auth ++ fasterxml ++ apis ++ test ++ misc ++ kafka
     },
     (mainClass in Compile) := Some("phoenix.server.Main"),
     // TODO @anna move the rest of location settings to common when tests are moved into subprojects
-    scalaSource in Test    := baseDirectory.value / "test" / "unit",
-    scalaSource in IT      := baseDirectory.value / "test" / "integration",
-    scalaSource in ET      := baseDirectory.value / "test" / "integration",
-    resourceDirectory in Test    := baseDirectory.value / "test" / "resources",
-    resourceDirectory in IT      := (resourceDirectory in Test).value,
-    resourceDirectory in ET      := (resourceDirectory in Test).value,
+    scalaSource in Test := baseDirectory.value / "test" / "unit",
+    scalaSource in IT := baseDirectory.value / "test" / "integration",
+    scalaSource in ET := baseDirectory.value / "test" / "integration",
+    resourceDirectory in Test := baseDirectory.value / "test" / "resources",
+    resourceDirectory in IT := (resourceDirectory in Test).value,
+    resourceDirectory in ET := (resourceDirectory in Test).value,
     initialCommands in console := fromFile("project/console_init").getLines.mkString("\n"),
     initialCommands in (Compile, consoleQuick) := "",
-    test := Def.sequential(compile in Test, compile in IT, compile in ET,
-                           test    in Test, test    in IT, test    in ET).value,
+    test := Def
+      .sequential(compile in Test, compile in IT, compile in ET, test in Test, test in IT, test in ET)
+      .value,
     testOptions in Test += Tests.Argument(TestFrameworks.ScalaTest, "-oD"),
-    javaOptions in Test ++= Seq("-Xmx2G", "-XX:+UseConcMarkSweepGC", "-Dphoenix.env=test"),
-    parallelExecution in Compile := true,
-    parallelExecution in Test := true,
-    parallelExecution in IT   := false,
-    parallelExecution in ET   := false,
-    fork in Test := false,
-    fork in IT   := true, /** FIXME: We couldn’t run ITs in parallel if we fork */
-    fork in ET   := true,
+    testForkedParallel in Test := true,
+    testForkedParallel in IT := true,
+    testForkedParallel in ET := true,
     logBuffered in Test := false,
-    logBuffered in IT   := false,
-    logBuffered in ET   := false
+    logBuffered in IT := false,
+    logBuffered in ET := false
   )
 
 lazy val root = (project in file("."))
@@ -63,7 +62,7 @@ lazy val seeder = (project in file("seeder"))
     libraryDependencies ++= Dependencies.gatling,
     cleanFiles += baseDirectory.value / "results",
     // we cannot fork and set javaOptions simply, as it causes some weird issue with db schema creation
-    initialize ~= (_ => System.setProperty("phoenix.env", "test" )),
+    initialize ~= (_ ⇒ System.setProperty("phoenix.env", "test")),
     fullClasspath in assembly := { // thanks sbt for that hacky way of excluding inter-project dependencies
       val phoenixClasses = (crossTarget in compile in phoenix).value.getAbsolutePath
       (fullClasspath in assembly).value.filterNot(_.data.getAbsolutePath.startsWith(phoenixClasses))
@@ -72,49 +71,26 @@ lazy val seeder = (project in file("seeder"))
   )
 
 lazy val objectframework = (project in file("objectframework"))
-  .dependsOn(starfish)
+  .dependsOn(core)
   .settings(
     commonSettings,
-    libraryDependencies ++= {
-      import Dependencies._
-      cats ++ shapeless ++ db ++ slick ++ json4s ++ logging :+
-      "com.networknt"         % "json-schema-validator"   % "0.1.1"
-    }
+    libraryDependencies ++= baseDependencies,
+    libraryDependencies += "com.networknt" % "json-schema-validator" % "0.1.1"
   )
 
-lazy val starfish = (project in file("starfish"))
+lazy val core = (project in file("core"))
   .settings(
     commonSettings,
-    libraryDependencies ++= {
-      import Dependencies._
-      cats ++ shapeless ++ db ++ slick ++ json4s
-    }
+    libraryDependencies ++= baseDependencies
   )
 
 fullAssembly := Def.task().dependsOn(writeVersion in root, assembly in phoenix, assembly in seeder).value
 
 // Injected seeds
-val seedCommand = " utils.seeds.Seeds seed --seedAdmins"
-seed     := (runMain in Compile in seeder).partialInput(seedCommand).evaluated
+val seedCommand = " seeds.Seeds seed --seedAdmins"
+seed := (runMain in Compile in seeder).partialInput(seedCommand).evaluated
 seedDemo := (runMain in Compile in seeder).partialInput(s"$seedCommand --seedDemo 1").evaluated
 
 // Gatling seeds
-seedOneshot    := (runMain in Compile in seeder).partialInput(" gatling.seeds.OneshotSeeds").evaluated
+seedOneshot := (runMain in Compile in seeder).partialInput(" gatling.seeds.OneshotSeeds").evaluated
 seedContinuous := (runMain in Compile in seeder).partialInput(" gatling.seeds.ContinuousSeeds").evaluated
-
-// Scalafmt
-scalafmtAll := Def.task().dependsOn(scalafmt in Compile in phoenix,
-                                    scalafmt in Test    in phoenix,
-                                    scalafmt in IT      in phoenix,
-                                    scalafmt in ET      in phoenix,
-                                    scalafmt in Compile in objectframework,
-                                    scalafmt in Compile in starfish,
-                                    scalafmt in Compile in seeder).value
-
-scalafmtTestAll := Def.task().dependsOn(scalafmtTest in Compile in phoenix,
-                                        scalafmtTest in Test    in phoenix,
-                                        scalafmtTest in IT      in phoenix,
-                                        scalafmtTest in ET      in phoenix,
-                                        scalafmtTest in Compile in objectframework,
-                                        scalafmtTest in Compile in starfish,
-                                        scalafmtTest in Compile in seeder).value
